--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <title>Train Time</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-  <title>Document</title>
+  
 </head>
 <body>
 
   <div class="container">
 
-    <div class="jumbotron" style="background-color: lightgray">
+    <div class="jumbotron" style="background-color: gray">
       <h1 class="text-center">"CHOO CHOO!" Goes the Train</h1>
       <h3 class="text-center">chugga chugga chugga</h3>
     </div>
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="panel panel-primary">
-          <div class="panel heading">
+          <div class="panel-heading">
             <h3 class="panel-title"><strong>Add Train</strong></h3>
           </div>
           <div class="panel-body">
@@ -68,6 +68,7 @@
                 <label for="">Frequency (Min)</label>
                 <input type="text" class="form-control" name="frequencyInput">
               </div>
+              <button type="submit" class="btn btn-primary" id="addTrainBtn">Submit</button>
             </form>
           </div>
         </div>
