--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <title>Train Time</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+  <!-- Firebase Reference -->
+  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+
+  <!-- Moment.js Reference -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
   
 </head>
@@ -14,8 +18,8 @@
   <div class="container">
 
     <div class="jumbotron" style="background-color: gray">
-      <h1 class="text-center">"CHOO CHOO!" Goes the Train</h1>
-      <h3 class="text-center">chugga chugga chugga</h3>
+      <h1 class="text-center">"CHOO CHOO!"</h1>
+      <h3 class="text-center">Goes the Train</h3>
     </div>
 
     <div class="row">
@@ -54,19 +58,19 @@
             <form>
               <div class="form-group">
                 <label for="">Train Name</label>
-                <input type="text" class="form-control" name="trainNameInput">
+                <input type="text" class="form-control" id="trainNameInput">
               </div>
               <div class="form-group">
                 <label for="">Destination</label>
-                <input type="text" class="form-control" name="destinationInput">
+                <input type="text" class="form-control" id="destinationInput">
               </div>
               <div class="form-group">
                 <label for="">First Train Time (HH:mm - Military Time)</label>
-                <input type="text" class="form-control" name="firstTrainInput">
+                <input type="text" class="form-control" id="firstTrainInput">
               </div>
               <div class="form-group">
                 <label for="">Frequency (Min)</label>
-                <input type="text" class="form-control" name="frequencyInput">
+                <input type="text" class="form-control" id="frequencyInput">
               </div>
               <button type="submit" class="btn btn-primary" id="addTrainBtn">Submit</button>
             </form>
@@ -77,7 +81,7 @@
 
   </div>
 
-  <script src="assets/javascript/logic.js"></script>
+<script src="assets/javascript/logic.js"></script>
   
 </body>
 </html>
